# SdServer

./: .gitmodules  CMakeLists.txt  partitions_ota.csv  sdkconfig  sdkconfig.old
components/BleSerial/: BleBatteryService.cpp  CMakeLists.txt
components/BleSerial/include/: bluetoothSelect.h
components/Parser/: CMakeLists.txt  Kconfig
components/Parser/include/: SparkFun_Extensible_Message_Parser.h
components/Parser/src/: Parse_BT.cpp
components/SdFat/: CMakeLists.txt
components/SdFat/src/: SdFat.h
components/SdFat/src/common/: ArduinoFiles.h
components/Unicore/: CMakeLists.txt
components/lz4/: CmakeLists.txt
components/temp/: temp.c
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/include/: Bluetooth.h  Network_.h  WebServer.h  WiFiManager.h  form.h  global.h  settings.h  state.h  support.h
main/src/: Bluetooth.cpp  Button.cpp  Network.cpp  System.cpp  Task.cpp  WebServer.cpp  WiFiManager.cpp  state.cpp  support.cpp
tools/: convert.py
web/: index.html  main.js  style.css
